# cancelreader

./: CHANGELOG.md  Cargo.toml  README.md
src/: fallback.rs  lib.rs  unix.rs  windows.rs
tests/: cancel_error_test.rs  cancelreader_default_test.rs  cancelreader_fallback_test.rs  cancelreader_test.rs
tests/common/: mod.rs
